--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -63,3 +63,9 @@ VasNikos:
   email: "nikolaos.vasarmidis@gmail.com"
   twitter: ""
 #
+xris81:
+  name: "Papachristos Christos"
+  bio: "student EAP"
+  uri: ""
+  email: "std115883@ac.eap.gr"
+  twitter: ""
